<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        tools:ignore="MissingConstraints">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="673dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento1"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio1"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento2"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio2"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento3"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio3"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento4"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio4"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento5"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio5"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento6"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio6"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento7"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio7"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento8"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio8"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento9"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio9"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/primary_light"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/logop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="95dp"
                    android:text="@string/Tratamiento10"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/Precio10"
                    android:textColor="@color/icons"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>